third_party/blink/web_tests/fast/events/set-attribute-listener-window-onerror-crash-expected.txt
CONSOLE ERROR: line 16: Uncaught SyntaxError: Unexpected token ';'
Test passes if it does not crash.
